Makes style sheet work in build & fixes body overflow scroll bar error maybe.

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -33,7 +33,7 @@ body {
 	line-height: 1.6;
 	color: #333;
 
-	overflow: clip;
+	overflow: clip !important; 
 }
 
 /* Remove default styles for main elements */
